--- a/models.ipynb
+++ b/models.ipynb
@@ -601,9 +601,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ECG Classification",
    "language": "python",
-   "name": "python3"
+   "name": "ecg-classification"
   },
   "language_info": {
    "codemirror_mode": {
@@ -615,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
