--- a/models.ipynb
+++ b/models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "36b40fbc",
    "metadata": {},
    "outputs": [],
@@ -24,20 +24,17 @@
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "from keras import backend as K\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "from scipy.signal import find_peaks\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import funcs\n",
     "from sklearn.decomposition import PCA\n",
-    "from keras import Model, Sequential\n",
-    "from keras.layers import Input, Dense\n",
-    "import pywt"
+    "import pywt\n",
+    "import funcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "81dd33cf",
    "metadata": {},
    "outputs": [],
@@ -61,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "8e3da9d6",
    "metadata": {},
    "outputs": [],
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "2815309f",
    "metadata": {},
    "outputs": [],
@@ -84,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "de9dba9b",
    "metadata": {},
    "outputs": [],
@@ -119,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c4da414a",
    "metadata": {},
    "outputs": [
@@ -152,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1eb1c97b",
    "metadata": {},
    "outputs": [],
@@ -172,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "d550b551",
    "metadata": {},
    "outputs": [],
@@ -184,18 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "98ac6169",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PCA represents 74.6260662690086% of the original variance\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "components = 150\n",
     "pca = PCA(n_components = components) \n",
@@ -208,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "52229465",
    "metadata": {},
    "outputs": [],
@@ -224,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "c63ec4a2",
    "metadata": {},
    "outputs": [],
@@ -235,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "9804586f",
    "metadata": {},
    "outputs": [],
@@ -254,21 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "5b1f55ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 0.5447102024612942, 1: 6.091564927857935}"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_weights = compute_class_weight(\n",
     "                                        class_weight = \"balanced\",\n",
@@ -281,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "95842c81",
    "metadata": {
     "scrolled": true
@@ -293,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "8a7d57e1",
    "metadata": {
     "scrolled": true
@@ -307,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "b86ba6cd",
    "metadata": {},
    "outputs": [],
@@ -317,112 +295,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "bb791325",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "17495/17495 [==============================] - 21s 1ms/step - loss: 0.2127 - accuracy: 0.9034 - false_negatives_2: 1507.0000\n",
-      "Epoch 2/100\n",
-      "17495/17495 [==============================] - 23s 1ms/step - loss: 0.1961 - accuracy: 0.9079 - false_negatives_2: 1227.0000\n",
-      "Epoch 3/100\n",
-      "17495/17495 [==============================] - 22s 1ms/step - loss: 0.1941 - accuracy: 0.9088 - false_negatives_2: 1179.0000\n",
-      "Epoch 4/100\n",
-      "17495/17495 [==============================] - 23s 1ms/step - loss: 0.1925 - accuracy: 0.9081 - false_negatives_2: 1125.0000\n",
-      "Epoch 5/100\n",
-      "17495/17495 [==============================] - 22s 1ms/step - loss: 0.1914 - accuracy: 0.9082 - false_negatives_2: 1092.0000\n",
-      "Epoch 6/100\n",
-      "17495/17495 [==============================] - 20s 1ms/step - loss: 0.1903 - accuracy: 0.9081 - false_negatives_2: 1039.0000\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f8958b5ad30>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelv3.fit(trainComponents, slideTrainDiagnostic, epochs=100, class_weight=class_weights, callbacks=[callback])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "43cae6dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5834/5834 [==============================] - 4s 684us/step - loss: 0.2846 - accuracy: 0.9017 - false_negatives_2: 534.0000\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.28460830450057983, 0.9017411470413208, 534.0]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelv3.evaluate(testComponents, slideTestDiagnostic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "c6da981b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17495/17495 [==============================] - 9s 537us/step\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      0.90      0.95    513876\n",
-      "           1       0.47      0.98      0.63     45951\n",
-      "\n",
-      "    accuracy                           0.91    559827\n",
-      "   macro avg       0.73      0.94      0.79    559827\n",
-      "weighted avg       0.95      0.91      0.92    559827\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "funcs.evaluate_model(modelv3.predict(trainComponents), slideTrainDiagnostic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "5952ba4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5834/5834 [==============================] - 4s 616us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "windowsPerOriginal = int(len(slideTrainTransform) / len(trainTransform))\n",
     "\n",
@@ -441,26 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "dc55a292",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      0.92      0.95      3353\n",
-      "           1       0.51      0.91      0.65       307\n",
-      "\n",
-      "    accuracy                           0.92      3660\n",
-      "   macro avg       0.75      0.92      0.80      3660\n",
-      "weighted avg       0.95      0.92      0.93      3660\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "funcs.evaluate_model(slideToRegLabels, testDiagnostic)"
    ]
@@ -573,27 +463,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2cfa5411",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook models.ipynb to html\n",
-      "[NbConvertApp] Writing 631898 bytes to models.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    " !jupyter nbconvert --to html models.ipynb  \n"
+    "!jupyter nbconvert --to html models.ipynb  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4e8649f",
+   "metadata": {},
+   "source": [
+    "# Convolutional Neural Network"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5e8b36",
+   "id": "c13318bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -601,9 +490,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ECG Classification",
+   "display_name": "ECG Classifier",
    "language": "python",
-   "name": "ecg-classification"
+   "name": "ecg"
   },
   "language_info": {
    "codemirror_mode": {
@@ -615,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
