made changes to cnn notebook

--- a/models.ipynb
+++ b/models.ipynb
@@ -490,9 +490,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ECG Classifier",
+   "display_name": "Tensorflow 2",
    "language": "python",
-   "name": "ecg"
+   "name": "tf2"
   },
   "language_info": {
    "codemirror_mode": {
