changed cnn architecture

--- a/cnntest.ipynb
+++ b/cnntest.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe14d2a9df0>"
+       "<matplotlib.image.AxesImage at 0x7f739efade80>"
       ]
      },
      "execution_count": 9,
@@ -168,61 +168,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "101f8560",
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Conv2D, Flatten, Conv1D\n",
-    "from keras import metrics"
+    "from keras import layers, metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "69329c29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputShape = (32, 1000, len(scales))"
+    "inputShape = (32, 1000, len(scales))\n",
+    "kernelSize = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0ddb3fa5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(32, 1000, 10)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inputShape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "730fcf1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#should we try using a rectangular kernel size?\n",
+    "\n",
+    "convInputLayer = layers.Conv1D(\n",
+    "    filters=64, kernel_size=kernelSize, input_shape=inputShape[1:], data_format=\"channels_last\")\n",
+    "convLayer = layers.Conv1D(\n",
+    "    filters=32, kernel_size=kernelSize)\n",
+    "batchNormLayer = layers.BatchNormalization(axis=1)\n",
+    "reLULayer = layers.ReLU()\n",
+    "maxPoolLayer = layers.MaxPooling1D(\n",
+    "    pool_size=kernelSize, strides=None) # should the size of the pooling layer be the same as the kernel size\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "17a6c61d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = Sequential()\n",
-    "convLayer = Conv1D(\n",
-    "    filters=64, kernel_size=10, input_shape=inputShape[1:], data_format=\"channels_last\", activation='relu')\n",
     "\n",
     "model.add(convLayer)\n",
-    "#what should the final value in the input be\n",
+    "model.add(batchNormLayer)\n",
+    "model.add(maxPoolLayer)\n",
+    "\n",
+    "model.add(convLayer)\n",
+    "model.add(batchNormLayer)\n",
+    "model.add(maxPoolLayer)\n",
+    "\n",
     "model.add(Flatten())\n",
     "model.add(Dense(50, activation='relu'))\n",
     "model.add(Dense(50, activation='relu'))\n",
@@ -231,45 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "fcd81c3b",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_2\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv1d_2 (Conv1D)           (None, 991, 64)           6464      \n",
-      "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 63424)             0         \n",
-      "                                                                 \n",
-      " dense_4 (Dense)             (None, 50)                3171250   \n",
-      "                                                                 \n",
-      " dense_5 (Dense)             (None, 50)                2550      \n",
-      "                                                                 \n",
-      " dense_6 (Dense)             (None, 2)                 102       \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 3,180,366\n",
-      "Trainable params: 3,180,366\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "dba3c832",
    "metadata": {},
    "outputs": [],
@@ -281,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "f9950219",
    "metadata": {},
    "outputs": [
@@ -291,7 +255,7 @@
        "{0: 0.5447102024612942, 1: 6.091564927857935}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "7c1e3561",
    "metadata": {},
    "outputs": [
@@ -311,34 +275,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "344/344 [==============================] - 8s 23ms/step - loss: 0.6895 - accuracy: 0.5816 - false_positives_2: 4593.0000 - val_loss: 0.6503 - val_accuracy: 0.5567 - val_false_positives_2: 1622.0000\n",
+      "344/344 [==============================] - 5s 13ms/step - loss: 0.6938 - accuracy: 0.5921 - false_positives_1: 4478.0000 - val_loss: 0.7150 - val_accuracy: 0.3763 - val_false_positives_1: 2282.0000\n",
       "Epoch 2/10\n",
-      "344/344 [==============================] - 8s 22ms/step - loss: 0.6133 - accuracy: 0.6106 - false_positives_2: 4274.0000 - val_loss: 0.5006 - val_accuracy: 0.7177 - val_false_positives_2: 1033.0000\n",
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.5530 - accuracy: 0.6867 - false_positives_1: 3439.0000 - val_loss: 0.4805 - val_accuracy: 0.7311 - val_false_positives_1: 984.0000\n",
       "Epoch 3/10\n",
-      "344/344 [==============================] - 7s 21ms/step - loss: 0.4297 - accuracy: 0.7675 - false_positives_2: 2552.0000 - val_loss: 0.5346 - val_accuracy: 0.7180 - val_false_positives_2: 1032.0000\n",
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.4795 - accuracy: 0.7483 - false_positives_1: 2763.0000 - val_loss: 0.5515 - val_accuracy: 0.7106 - val_false_positives_1: 1059.0000\n",
       "Epoch 4/10\n",
-      "344/344 [==============================] - 7s 20ms/step - loss: 0.2430 - accuracy: 0.8815 - false_positives_2: 1301.0000 - val_loss: 0.4704 - val_accuracy: 0.8032 - val_false_positives_2: 720.0000\n",
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.3828 - accuracy: 0.8074 - false_positives_1: 2114.0000 - val_loss: 0.4181 - val_accuracy: 0.7830 - val_false_positives_1: 794.0000\n",
       "Epoch 5/10\n",
-      "344/344 [==============================] - 7s 20ms/step - loss: 0.1078 - accuracy: 0.9498 - false_positives_2: 551.0000 - val_loss: 0.4797 - val_accuracy: 0.8830 - val_false_positives_2: 428.0000\n",
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.3005 - accuracy: 0.8501 - false_positives_1: 1645.0000 - val_loss: 0.2668 - val_accuracy: 0.9041 - val_false_positives_1: 351.0000\n",
       "Epoch 6/10\n",
-      "344/344 [==============================] - 7s 20ms/step - loss: 0.0508 - accuracy: 0.9792 - false_positives_2: 228.0000 - val_loss: 0.5354 - val_accuracy: 0.8997 - val_false_positives_2: 367.0000\n",
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.2750 - accuracy: 0.8645 - false_positives_1: 1487.0000 - val_loss: 0.3246 - val_accuracy: 0.9128 - val_false_positives_1: 319.0000\n",
       "Epoch 7/10\n",
-      "344/344 [==============================] - 7s 20ms/step - loss: 0.0327 - accuracy: 0.9859 - false_positives_2: 155.0000 - val_loss: 0.6212 - val_accuracy: 0.8981 - val_false_positives_2: 373.0000\n",
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.2458 - accuracy: 0.8867 - false_positives_1: 1244.0000 - val_loss: 0.3122 - val_accuracy: 0.8748 - val_false_positives_1: 458.0000\n",
       "Epoch 8/10\n",
-      "344/344 [==============================] - 7s 20ms/step - loss: 0.0254 - accuracy: 0.9934 - false_positives_2: 72.0000 - val_loss: 0.6718 - val_accuracy: 0.8830 - val_false_positives_2: 428.0000\n",
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.2031 - accuracy: 0.9037 - false_positives_1: 1057.0000 - val_loss: 0.3109 - val_accuracy: 0.8858 - val_false_positives_1: 418.0000\n",
       "Epoch 9/10\n",
-      "344/344 [==============================] - 7s 20ms/step - loss: 0.0499 - accuracy: 0.9790 - false_positives_2: 231.0000 - val_loss: 0.6999 - val_accuracy: 0.9068 - val_false_positives_2: 341.0000\n",
+      "344/344 [==============================] - 5s 13ms/step - loss: 0.1912 - accuracy: 0.9103 - false_positives_1: 985.0000 - val_loss: 0.2994 - val_accuracy: 0.9030 - val_false_positives_1: 355.0000\n",
       "Epoch 10/10\n",
-      "344/344 [==============================] - 7s 20ms/step - loss: 0.0316 - accuracy: 0.9909 - false_positives_2: 100.0000 - val_loss: 0.7075 - val_accuracy: 0.8852 - val_false_positives_2: 420.0000\n"
+      "344/344 [==============================] - 4s 13ms/step - loss: 0.1645 - accuracy: 0.9229 - false_positives_1: 846.0000 - val_loss: 0.3007 - val_accuracy: 0.9262 - val_false_positives_1: 270.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fe0870b1130>"
+       "<keras.callbacks.History at 0x7f7340ecd370>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "294e4e2b",
    "metadata": {},
    "outputs": [
@@ -361,16 +325,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "115/115 [==============================] - 1s 5ms/step - loss: 1.4705 - accuracy: 0.9087 - false_positives_1: 334.0000\n"
+      "115/115 [==============================] - 0s 3ms/step - loss: 0.3053 - accuracy: 0.9268 - false_positives_1: 268.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[1.4704995155334473, 0.908743143081665, 334.0]"
+       "[0.3053377866744995, 0.9267759323120117, 268.0]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "50db95b6",
    "metadata": {},
    "outputs": [
@@ -389,16 +353,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "115/115 [==============================] - 1s 5ms/step\n",
+      "115/115 [==============================] - 0s 2ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      0.97      0.95      3353\n",
-      "           1       0.42      0.24      0.31       307\n",
+      "           0       0.96      0.96      0.96      3353\n",
+      "           1       0.57      0.54      0.55       307\n",
       "\n",
-      "   micro avg       0.91      0.91      0.91      3660\n",
-      "   macro avg       0.68      0.61      0.63      3660\n",
-      "weighted avg       0.89      0.91      0.90      3660\n",
-      " samples avg       0.91      0.91      0.91      3660\n",
+      "   micro avg       0.93      0.93      0.93      3660\n",
+      "   macro avg       0.76      0.75      0.76      3660\n",
+      "weighted avg       0.93      0.93      0.93      3660\n",
+      " samples avg       0.93      0.93      0.93      3660\n",
       "\n"
      ]
     }
